tests/negative/lexer/int-digit.orng
fn main() -> Int {
    01_abc
}